# sequent-calculus-compiler

./: .gitignore  .gitmodules  ;  CITATION.cff  Cargo.toml  Features.md  Makefile  README.md  \  ]  aggregate.py  check_missing.sh  deriv.comp  deriv.focus  deriv.lin  deriv.linold  deriv.shrunk  deriv.shrunkold  flake.nix  paper.fdb_latexmk  paper.fls  result  run_tests.py  tests.py
app/: Cargo.toml
app/src/: main.rs
app/src/cli/: check.rs  clean.rs  codegen.rs  compile.rs  fmt.rs  focus.rs  gen_completions.rs  inline.rs  linearize.rs  mod.rs  rewrite.rs  shrink.rs  texify.rs  uniquify.rs
app/src/utils/: cli_options.rs  ignore_colors.rs  mod.rs
app/target_grk/compiled/: Tuples.txt
app/tests/: integration_test.rs
bench/: Cargo.toml
bench/results/: EraseUnused.csv  FactorialAccumulator.csv  FibonacciRecursive.csv  IterateIncrement.csv  LookupTree.csv  MatchOptions.csv  SumRange.csv  TestTable.csv
bench/src/: main.rs
bench/src/cli/: benchmark.rs  examples.rs  mod.rs  report.rs  run.rs
bench/suite/: Cargo.toml
bench/suite/FibonacciRecursive/: FibonacciRecursive.args
bench/suite/LookupTree/: LookupTree.args
benchmarks/: Cargo.toml  EraseUnused.sc  Features.md  FibonacciRecursive.sc  LookupTree.sc
benchmarks/EraseUnused/: EraseUnused.args
benchmarks/FactorialAccumulator/: FactorialAccumulator.args
benchmarks/results/: Ack.csv  AckGoto.csv  Divrec.csv  EraseUnused.csv  FactorialAccumulator.csv  Fib.csv  FibonacciRecursive.csv  IterateIncrement.csv  Lcss.csv  Life.csv  LookupTree.csv  MatchOptions.csv  Merge.csv  Minimax.csv  Motzkin.csv  MotzkinGoto.csv  Nqueens.csv  Primes.csv  Sudan.csv  SudanGoto.csv  SumRange.csv  TailFib.csv  Tak.csv  TakGoto.csv  TestTable.csv
benchmarks/src/cli/: benchmark.rs  config.rs  mod.rs  report.rs  run.rs
benchmarks/suite/Ack/: Ack.args  Ack.rs  Ack.sc
benchmarks/suite/AckGoto/: AckGoto.args  AckGoto.sc
benchmarks/suite/Bernoulli/: Bernouilli.args  Bernouilli.sc
benchmarks/suite/Boyer/: Boyer  Boyer.args  Boyer.rs  Boyer.sc
benchmarks/suite/Constraints/: Constraints.args  Constraints.rs  Constraints.sc
benchmarks/suite/Cpstak/: Cpstak.args  Cpstak.sc
benchmarks/suite/Cryptarithm1/: Cryptarithm1.args  Cryptarithm1.rs  Cryptarithm1.sc
benchmarks/suite/Deriv/: Deriv.args  Deriv.rs  Deriv.sc
benchmarks/suite/Divrec/: Divrec.args  Divrec.sc
benchmarks/suite/EraseUnused/: EraseUnused.args  EraseUnused.sc
benchmarks/suite/Evenodd/: Evenodd.args  Evenodd.rs  Evenodd.sc
benchmarks/suite/EvenoddGoto/: EvenoddGoto.args  EvenoddGoto.sc
benchmarks/suite/FactorialAccumulator/: FactorialAccumulator.args  FactorialAccumulator.sc
benchmarks/suite/Fib/: Fib.args  Fib.sc
benchmarks/suite/FibonacciRecursive/: FibonacciRecursive.args  FibonacciRecursive.sc
benchmarks/suite/Fish/: Fish.args  Fish.rs  Fish.sc
benchmarks/suite/Gcd/: Gcd.args  Gcd.rs  Gcd.sc
benchmarks/suite/Integer/: Integer  Integer.args  Integer.rs  Integer.sc
benchmarks/suite/IterateIncrement/: IterateIncrement.args  IterateIncrement.sc
benchmarks/suite/Lcss/: Lcss.args  Lcss.rs  Lcss.sc
benchmarks/suite/Life/: Life  Life.args  Life.rs  Life.sc
benchmarks/suite/LookupTree/: LookupTree.args  LookupTree.sc
benchmarks/suite/Mandelbrot/: Mandelbrot.sc
benchmarks/suite/MatchOptions/: MatchOptions  MatchOptions.args  MatchOptions.rs  MatchOptions.sc
benchmarks/suite/Mazefun/: Mazefun.sc
benchmarks/suite/Mcray/: Mcray.sc
benchmarks/suite/Mctrace/: Mctrace.sc
benchmarks/suite/Merge/: Merge.args  Merge.rs  Merge.sc
benchmarks/suite/Minimax/: Minimax.args  Minimax.rs  Minimax.sc
benchmarks/suite/Motzkin/: Motzkin.args  Motzkin.sc
benchmarks/suite/MotzkinGoto/: MotzkinGoto.args  MotzkinGoto.sc
benchmarks/suite/Nqueens/: Nqueens  Nqueens.args  Nqueens.rs  Nqueens.sc
benchmarks/suite/Perm/: Perm.args  Perm.rs  Perm.sc
benchmarks/suite/Primes/: Primes.args  Primes.rs  Primes.sc
benchmarks/suite/Sudan/: Sudan.args  Sudan.sc
benchmarks/suite/SudanGoto/: SudanGoto.args  SudanGoto.sc
benchmarks/suite/SumRange/: SumRange.args  SumRange.sc
benchmarks/suite/TailFib/: TailFib.args  TailFib.sc
benchmarks/suite/Tak/: Tak.args  Tak.sc
benchmarks/suite/TakGoto/: TakGoto.args  TakGoto.sc
benchmarks/suite/Takl/: Takl  Takl.args  Takl.rs  Takl.sc
benchmarks/suite/TestTable/: TestTable.sc
benchmarks/wip/Mazefun/: Mazefun.sc
benchmarks/wip/Minimax/: Minimax.sc
lang/axcut/: Cargo.toml
lang/axcut/examples/: midi.rs  nonLinear.rs
lang/axcut/src/: lib.rs
lang/axcut2aarch64/: Cargo.toml
lang/axcut2aarch64/src/: code.rs  coder.rs  config.rs  into_routine.rs  lib.rs  memory.rs  parallel_moves.rs  substitution.rs  utils.rs
lang/axcut2aarch64/tests/: arith.rs  closure.rs  either.rs  list.rs  midi.rs  mini.rs  nonLinear.rs  quad.rs
lang/axcut2backend/: Cargo.toml
lang/axcut2backend/src/: code.rs  coder.rs  config.rs  fresh_labels.rs  lib.rs  memory.rs  parallel_moves.rs  substitution.rs  utils.rs
lang/axcut2rv64/: Cargo.toml
lang/axcut2rv64/src/: code.rs  config.rs  into_routine.rs  lib.rs  memory.rs  parallel_moves.rs  utils.rs
lang/axcut2rv64/tests/: arith.rs  closure.rs  either.rs  list.rs  midi.rs  mini.rs  nonLinear.rs  (+1 more)
lang/axcut2x86_64/: Cargo.toml
lang/axcut_examples/: Cargo.toml
lang/core2axcut/: Cargo.toml
lang/core_lang/: Cargo.toml
lang/driver/: Cargo.toml  askama.toml
lang/fun/: Cargo.toml
lang/fun2core/: Cargo.toml
lsp/: Cargo.toml
lsp/src/: errors.rs  logger.rs  main.rs
testsuite/: Cargo.toml
testsuite/endtoend/: Cargo.toml
testsuite/fail_check/: T-001-codata-codata.sc  T-001-data-codata.sc  T-001-data-data.sc  T-001-destructor.sc  T-001-fun.sc  T-004-unbound-variable.sc  T-005-unbound-covariable.sc  T-009-empty-match.sc  case-missing.sc  case_mixed.sc  cocase-additional.sc  cocase-missing.sc  type-param-missing-dtor.sc
testsuite/src/: end_to_end_tests.rs  errors.rs  fun_tests.rs  load_tests.rs  macros.rs  main.rs
testsuite/success/: case_of.sc  goto.sc  label.sc  label_goto.sc  literal.sc  match.sc  op.sc  variable.sc
testsuite/success_check/: goto.sc  label_goto.sc
(+1045 files in other folders)
