[workspace]
members = [
    "app",
    "testsuite",
    "lsp",
    "lang/axcut",
    "lang/axcut2aarch64",
    "lang/axcut2backend",
    "lang/axcut2rv64",
    "lang/axcut2x86_64",
    "lang/core_lang",
    "lang/core2axcut",
    "lang/driver",
    "lang/fun",
    "lang/fun2core",
    "lang/printer",
]
default-members = ["app","lsp"]
resolver = "3"

[workspace.package]
version = "0.1.0"
edition = "2024"
authors = ["Marius Müller", "Marco Tzschentke", "Philipp Schuster", "Jonathan Immanuel Brachthäuser", "Klaus Ostermann", "David Binder"]
license = "MIT OR Apache-2.0"
categories = ["compilers"]

[workspace.dependencies]
# source code locations
codespan = { git = "https://github.com/polarity-lang/codespan.git", rev = "542320ab177fd38fff3a398a97b3f0352e065149" }
# ignoring fields when deriving traits (e.g. Eq, Hash)
derivative = { version = "2" }
thiserror = { version = "1" }
miette = { version = "5" }
pretty = { version = "0.11", features = ["termcolor"] }
goldenfile = { version = "1.7.3" }
