[workspace]
members = [
    "app",
    "testsuite",
    "lang/axcut",
    "lang/axcut2aarch64",
    "lang/axcut2backend",
    "lang/axcut2rv64",
    "lang/axcut2x86_64",
    "lang/core_lang",
    "lang/core2axcut",
    "lang/driver",
    "lang/fun",
    "lang/fun2core",
    "lang/printer",
    "lang/macros/utils",
    "lang/macros/core",
    "lang/macros/axcut",
]
default-members = ["app"]
resolver = "3"

[workspace.package]
version      = "0.1.0"
edition      = "2024"
rust-version = "1.87"
authors      = ["Marius Müller", "Marco Tzschentke", "Philipp Schuster", "Jonathan Immanuel Brachthäuser", "Klaus Ostermann", "David Binder"]
license      = "MIT OR Apache-2.0"
homepage     = "https://github.com/SequentCalculus"
repository   = "https://github.com/SequentCalculus/sequent-calculus-compiler"
categories   = ["compilers"]

[workspace.dependencies]
derivative   = { version = "2" }
thiserror    = { version = "1" }
miette       = { version = "5" }
pretty       = { version = "0.11", features = ["termcolor"] }
goldenfile   = { version = "1.7.3" }
opener       = { version = "0.7.2" }
askama       = { version = "0.12.1" }
lalrpop-util = { version = "0.20.2" }
lalrpop      = { version = "0.20.2" }
quote        = { version = "1.0" }
proc-macro2  = { version = "1.0" }
syn          = { version = "2.0" }

# Workspace members
axcut         = { version = "0.1.0", path = "./lang/axcut" }
axcut2aarch64 = { version = "0.1.0", path = "./lang/axcut2aarch64" }
axcut2backend = { version = "0.1.0", path = "./lang/axcut2backend" }
axcut2rv64    = { version = "0.1.0", path = "./lang/axcut2rv64" }
axcut2x86_64  = { version = "0.1.0", path = "./lang/axcut2x86_64" }
core_lang     = { version = "0.1.0", path = "./lang/core_lang", package = "scc-core-lang" }
core2axcut    = { version = "0.1.0", path = "./lang/core2axcut" }
driver        = { version = "0.1.0", path = "./lang/driver" }
fun           = { version = "0.1.0", path = "./lang/fun" }
fun2core      = { version = "0.1.0", path = "./lang/fun2core" }
printer       = { version = "0.1.0", path = "./lang/printer", package = "scc-printer" }
# Workspace members which are dev-dependencies
# They don't have a version because of https://github.com/rust-lang/cargo/issues/4242
core_macros   = { path = "./lang/macros/core", package = "scc-core-macros" }
axcut_macros  = { path = "./lang/macros/axcut" }
macro_utils   = { path = "./lang/macros/utils", package = "scc-macro-utils" }
