[package]
name = "grokking"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "grokking"
path = "src/main.rs"

[dependencies]
# CLI
clap = { version = "4", features = ["derive"] }
termsize = "0.1"
# Workspace dependencies
driver = { path = "../lang/driver" }
printer = { path = "../lang/printer" }
# fancy error messages
miette = { workspace = true, features = ["fancy"] }
thiserror = { workspace = true }

[dev-dependencies]
# For testing the binary
assert_cmd = "2.0.14"
