[package]
name = "scc"

version.workspace = true
edition.workspace = true

[[bin]]
name = "scc"
path = "src/main.rs"

[dependencies]
# External dependencies
clap          = { version = "4", features = ["derive"] }
clap_complete = { version = "4.5.38" }
termsize      = { version = "0.1" }
miette        = { workspace = true, features = ["fancy"] }
thiserror     = { workspace = true }

# Workspace members
driver  = { workspace = true }
printer = { workspace = true }



[dev-dependencies]
assert_cmd = "2.0.14"
