[package]
name = "bench"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "bench"
path = "src/main.rs"

[dependencies]
# CLI
clap = { version = "4", features = ["derive"] }
miette = { workspace = true, features = ["fancy"] }
# Reporting
plotters = {version="0.3.7"}
# Workspace dependencies
driver = { path = "../lang/driver" }
