[package]
name = "benchmarks"

# Inherited from workspace Cargo.toml
version.workspace = true
edition.workspace = true

[[bin]]
name = "bench"
path = "src/main.rs"

[dependencies]
# CLI
clap = { version = "4", features = ["derive"] }
miette = { workspace = true, features = ["fancy"] }
# Benchmark Config
basic-toml = { version = "0.1.9" }
serde = { version = "1.0.217" }
# Workspace dependencies
driver = { path = "../lang/driver" }
