[package]
name = "scc-lsp"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "scc-lsp"
path = "src/main.rs"

[dependencies]
fun={path="../lang/fun"}
lsp-server={version="0.7.8"}
lsp-types={version="0.97.0"}
serde_json={version="1.0.139"}
serde={version="1.0.218"}
log={version="0.4.6",features=["std"]}
crossbeam-channel={version="0.5.14"}
miette = { workspace = true }
printer = { version = "0.1.0", path = "../lang/printer" }
