[package]
name = "testsuite"

# Inherited from workspace Cargo.toml
version.workspace = true
edition.workspace = true

autobins = false

[[test]]
name = "testsuite"
path = "src/main.rs"
harness = false

[dependencies]
# Workspace dependencies
driver = { path = "../lang/driver" }
fun = { path = "../lang/fun" }
printer = {path = "../lang/printer" }
basic-toml = { version = "0.1.9" }
serde = { version = "1.0.217" }
