[package]
name = "testsuite"

version.workspace      = true
edition.workspace      = true
rust-version.workspace = true
authors.workspace      = true
license.workspace      = true
homepage.workspace     = true
repository.workspace   = true
categories.workspace   = true

autobins = false

[[test]]
name = "testsuite"
path = "src/main.rs"
harness = false

[dependencies]
# Workspace dependencies
basic-toml = { version = "0.1.9" }
serde      = { version = "1.0.217" }

# Workspace members
driver    = { workspace = true }
fun       = { workspace = true }
printer   = { workspace = true }
core_lang = { workspace = true }
core_macros    = { workspace = true }
