[package]
name        = "axcut"
description = "The AxCut intermediate representation"

version.workspace      = true
edition.workspace      = true
rust-version.workspace = true
authors.workspace      = true
license.workspace      = true
homepage.workspace     = true
repository.workspace   = true
categories.workspace   = true

[dependencies]
# Workspace members
printer = { workspace = true }

[dev-dependencies]
axcut_macros = { workspace = true }
