[package]
name = "axcut2aarch64"

# Inherited from workspace Cargo.toml
version.workspace = true
edition.workspace = true

[dependencies]
axcut = { path = "../axcut" }
axcut2backend = { path = "../axcut2backend" }
printer = { path = "../printer" }

[dev-dependencies]
goldenfile = { workspace = true }
