[package]
name        = "axcut2aarch64"
description = "Translating AxCut to aarch64 instructions"

version.workspace      = true
edition.workspace      = true
rust-version.workspace = true
authors.workspace      = true
license.workspace      = true
homepage.workspace     = true
repository.workspace   = true
categories.workspace   = true

[dependencies]
# Workspace members
axcut         = { workspace = true }
axcut2backend = { workspace = true }
printer       = { workspace = true }

[dev-dependencies]
goldenfile = { workspace = true }
