[package]
name        = "axcut2backend"
description = "Translation of AxCut to backend IR"

version.workspace      = true
edition.workspace      = true
rust-version.workspace = true
authors.workspace      = true
license.workspace      = true
homepage.workspace     = true
repository.workspace   = true
categories.workspace   = true

[dependencies]
# Workspace members
axcut   = { workspace = true }
printer = { workspace = true }
