[package]
name        = "axcut2rv64"
description = "Translating AxCut to 64-Bit Risc-V instructions"

version.workspace      = true
edition.workspace      = true
rust-version.workspace = true
authors.workspace      = true
license.workspace      = true
homepage.workspace     = true
repository.workspace   = true
categories.workspace   = true

[dependencies]
# Workspace members
axcut         = { workspace = true }
axcut2backend = { workspace = true }

[dev-dependencies]
axcut_macros    = { workspace = true }
axcut_examples  = { workspace = true }
goldenfile      = { workspace = true }
