[package]
name        = "axcut_examples"
description = "Examples in Axcut"

version.workspace      = true
edition.workspace      = true
rust-version.workspace = true
authors.workspace      = true
license.workspace      = true
homepage.workspace     = true
repository.workspace   = true
categories.workspace   = true

[dependencies]
# Workspace members
axcut        = { workspace = true }
axcut_macros = { workspace = true }
printer      = { workspace = true }
