[package]
name        = "core2axcut"
description = "Translating the Core intermediate representation to AxCut"

version.workspace      = true
edition.workspace      = true
rust-version.workspace = true
authors.workspace      = true
license.workspace      = true
homepage.workspace     = true
repository.workspace   = true
categories.workspace   = true

[dependencies]
# Workspace members
axcut     = { workspace = true }
core_lang = { workspace = true }
printer   = { workspace = true }
