[package]
name        = "driver"
description = "The compiler driver that orchestrates the different compilation steps"

version.workspace      = true
edition.workspace      = true
rust-version.workspace = true
authors.workspace      = true
license.workspace      = true
homepage.workspace     = true
repository.workspace   = true
categories.workspace   = true

[dependencies]
# Workspace members
axcut         = { workspace = true }
axcut2aarch64 = { workspace = true }
axcut2backend = { workspace = true }
axcut2x86_64  = { workspace = true }
axcut2rv64    = { workspace = true }
fun           = { workspace = true }
fun2core      = { workspace = true }
core_lang     = { workspace = true }
core2axcut    = { workspace = true }
printer       = { workspace = true }

# External dependencies
thiserror = { workspace = true }
miette    = { workspace = true, features = ["fancy"] }
opener    = { workspace = true }
askama    = { workspace = true }
