[package]
name = "fun"
version = "0.0.1"
edition = "2021"

[features]
# This feature provides definitions that can be used to write
# unit tests in dependent crates.
test-common = []

[dependencies]
lalrpop-util = { version = "0.20.2", features = ["lexer"] }
# Deriving
derivative = { workspace = true }
# Source code locations
codespan = { workspace = true }
# Error messages
thiserror = { workspace = true }
miette = { workspace = true }
printer = { path = "../printer" }

[build-dependencies]
lalrpop = "0.20.2"
