[package]
name = "fun"

# Inherited from workspace Cargo.toml
version.workspace = true
edition.workspace = true

[features]
# This feature provides definitions that can be used to write
# unit tests in dependent crates.
# Since this feature is also used by the tests in fun, running unit tests in fun now requires calling
# cargo test -p fun --lib --features=test-common
test-common = []

[dependencies]
# Lexer Generator
logos = { version = "0.14.0" }
# Parser Generator
lalrpop-util = { version = "0.20.2", features = ["lexer"] }
# Deriving
derivative = { workspace = true }
# Source code locations
codespan = { workspace = true }
# Error messages
thiserror = { workspace = true }
miette = { workspace = true }
printer = { path = "../printer" }

[build-dependencies]
lalrpop = "0.20.2"
