[package]
name        = "fun"
description = "The Fun surface language"

version.workspace      = true
edition.workspace      = true
rust-version.workspace = true
authors.workspace      = true
license.workspace      = true
homepage.workspace     = true
repository.workspace   = true
categories.workspace   = true

[features]
# This feature provides definitions that can be used to write
# unit tests in dependent crates.
# Since this feature is also used by the tests in fun, running unit tests in fun now requires calling
# cargo test -p fun --lib --features=test-common
test-common = []

[dependencies]
lalrpop-util = { workspace = true, features = ["lexer"] }
derivative   = { workspace = true }
thiserror    = { workspace = true }
miette       = { workspace = true }

# Workspace members
printer = { workspace = true }

[build-dependencies]
lalrpop = { workspace = true }
