[package]
name = "fun2core"

# Inherited from workspace Cargo.toml
version.workspace = true
edition.workspace = true

[dependencies]
fun = { path = "../fun" }
printer = { path = "../printer" }
core_lang = { path = "../core_lang" }
codespan = { workspace = true }

[dev-dependencies]
fun = { path = "../fun", features = ["test-common"] }
