[package]
name = "fun2core"

version.workspace = true
edition.workspace = true

[dependencies]
# External dependencies
codespan  = { workspace = true }

# Workspace members
fun       = { workspace = true }
printer   = { workspace = true }
core_lang = { workspace = true }

[dev-dependencies]
fun = { workspace = true, features = ["test-common"] }
