[package]
name        = "fun2core"
description = "Translating the Fun surface language to the Core intermediate representation"

version.workspace      = true
edition.workspace      = true
rust-version.workspace = true
authors.workspace      = true
license.workspace      = true
homepage.workspace     = true
repository.workspace   = true
categories.workspace   = true

[dependencies]
# External dependencies
codespan  = { workspace = true }

# Workspace members
fun       = { workspace = true }
printer   = { workspace = true }
core_lang = { workspace = true }

[dev-dependencies]
fun = { workspace = true, features = ["test-common"] }
macros = { workspace = true }
