[package]
name = "endtoend"
version = "0.1.0"
edition = "2021"

autobins = false

[[test]]
name = "endtoend"
path = "src/main.rs"
harness = false

[dependencies]
# Workspace dependencies
driver = { path = "../../lang/driver" }
fun = { path = "../../lang/fun" }
printer = {path = "../../lang/printer" }
