[package]
name = "core_macros"
description = "Macros for Core"

version.workspace      = true
edition.workspace      = true
rust-version.workspace = true
authors.workspace      = true
license.workspace      = true
homepage.workspace     = true
repository.workspace   = true
categories.workspace   = true

[lib]
proc-macro = true

[dependencies]
macro_utils = { path= "../utils" }
core_lang = { path = "../../core_lang" }
quote = "1.0"
proc-macro2 = "1.0"
syn = { version = "2.0", features = ["full"] }
