[package]
name        = "scc-core-macros"
description = "Macros for Core"

version.workspace      = true
edition.workspace      = true
rust-version.workspace = true
authors.workspace      = true
license.workspace      = true
homepage.workspace     = true
repository.workspace   = true
categories.workspace   = true

[lib]
proc-macro = true

[dependencies]
quote       = { workspace = true }
proc-macro2 = { workspace = true }
syn         = { workspace = true, features =["full"] }

# Workspace members
macro_utils = { workspace = true }
core_lang   = { workspace = true }

