[package]
name        = "scc-macro-utils"
description = "Utilities for working with macros"

version.workspace      = true
edition.workspace      = true
rust-version.workspace = true
authors.workspace      = true
license.workspace      = true
homepage.workspace     = true
repository.workspace   = true
categories.workspace   = true

[dependencies]
quote       = { workspace = true }
proc-macro2 = { workspace = true }
syn         = { workspace = true, features =["full"] }
